aws_eip.pritunl.tf
resource "aws_eip" "pritunl" {
  instance = aws_instance.pritunl.id
  vpc      = true
}
